[gd_scene load_steps=4 format=3 uid="uid://i2ulr85f0jb7"]

[ext_resource type="Script" uid="uid://parybxg7tb1k" path="res://scripts/ui/PVZ_button_base.gd" id="1_xin63"]
[ext_resource type="Theme" uid="uid://em12la0rqibq" path="res://PVZ_theme.tres" id="2_qhvyb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dc1ex"]

[node name="PVZButtonBase" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -121.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = 43.0
grow_horizontal = 0
script = ExtResource("1_xin63")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = -3.0
offset_right = 122.0
offset_bottom = 47.0
theme = ExtResource("2_qhvyb")
theme_type_variation = &"PanelButtonBG"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = -1.0
offset_right = 119.0
offset_bottom = 40.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_dc1ex")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_dc1ex")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_dc1ex")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dc1ex")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_dc1ex")
theme_override_styles/normal = SubResource("StyleBoxEmpty_dc1ex")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 8.0
offset_right = 78.0
offset_bottom = 31.0
text = "菜单"

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
